# toxic-analyzer

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  API_CONTRACTS.md  Dockerfile  README.md  ToxicAnalyzer.sln
backend/src/ToxicAnalyzer.Api/: Program.cs  ToxicAnalyzer.Api.csproj  ToxicAnalyzer.Api.http  appsettings.Development.json  appsettings.json
backend/src/ToxicAnalyzer.Api/Endpoints/: ToxicityEndpoints.cs
backend/src/ToxicAnalyzer.Api/Properties/: launchSettings.json
backend/src/ToxicAnalyzer.Application/: ToxicAnalyzer.Application.csproj
backend/src/ToxicAnalyzer.Application/Abstractions/: ActorType.cs  AnalysisTextVoteKind.cs  AnalysisTextVotingCandidate.cs  AnalysisTextVotingDetails.cs  CurrentActor.cs  ExplainedModelPrediction.cs  IAnalysisCaptureScheduler.cs  IAnalysisRepository.cs  IAnalysisTextVotingRepository.cs  IClock.cs  ICurrentActorAccessor.cs  IModelPredictionClient.cs  IUnitOfWork.cs  ModelPrediction.cs  ModelPredictionExplanation.cs  NoOpAnalysisCaptureScheduler.cs
backend/src/ToxicAnalyzer.Application/Auth/: AuthCapabilities.cs  AuthClaimTypes.cs  AuthModels.cs  AuthOptions.cs  IAccessTokenIssuer.cs  IAuthStore.cs  IPasswordHasher.cs  ISessionTokenService.cs
backend/src/ToxicAnalyzer.Application/Common/: ApplicationException.cs  AuthenticationFailedException.cs  ConflictException.cs  NotFoundException.cs  ValidationError.cs  ValidationException.cs
backend/src/ToxicAnalyzer.Application/Toxicity/: AnalysisResultModel.cs  BatchSummaryModel.cs  ModelDescriptor.cs  ToxicityApplicationLimits.cs  ToxicityMappings.cs
backend/src/ToxicAnalyzer.Infrastructure/: InfrastructureServiceCollectionExtensions.cs  ToxicAnalyzer.Infrastructure.csproj
backend/tests/ToxicAnalyzer.IntegrationTests/: ApiWebApplicationFactory.cs  Fakes.cs  ToxicAnalyzer.IntegrationTests.csproj  ToxicityEndpointsTests.cs
backend/tests/ToxicAnalyzer.UnitTests/: ToxicAnalyzer.UnitTests.csproj
bots/discord/: .env.example  .gitignore  README.md  config.example.json  eslint.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
bots/discord/src/: main.ts
model/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  FASTAPI.md  MODEL_EVOLUTION.md  README.md  pyproject.toml  run_prepare_habr_comments.bat
model/configs/: baseline_hard_cases.jsonl  baseline_hard_cases_v3.jsonl  baseline_seed_examples.jsonl  baseline_seed_examples_v3.jsonl  habr_comments.toml
model/scripts/: habr_prepare_status.ps1  watch_habr_prepare.ps1
model/sql/postgres/: 001_create_training_store.sql  002_create_training_dataset_view.sql
model/src/toxic_analyzer/: __init__.py  admin_service.py  apply_training_store_schema.py  ask_baseline.py  baseline_data.py  baseline_features.py  baseline_model.py  build_habr_annotation_compact_db.py  build_habr_annotation_db.py  build_mixed_toxic_dataset.py  hard_case_dataset.py  import_mixed_dataset_to_postgres.py  inference_service.py  model_runtime.py  paths.py  postgres_store.py  predict_baseline.py  prepare_habr_comments.py  train_baseline.py  training_data.py  training_service.py
model/src/toxic_analyzer/api/: __init__.py  app.py  routes_admin.py  routes_runtime.py  runtime_state.py  schemas.py
model/tests/: conftest.py  test_api_admin.py  test_api_runtime.py  test_ask_baseline.py  test_baseline_data.py  test_baseline_features.py  test_baseline_model.py  test_baseline_versioning.py  test_build_habr_annotation_compact_db.py  test_build_habr_annotation_db.py  test_build_mixed_toxic_dataset.py  test_hard_case_dataset.py  test_import_mixed_dataset_to_postgres.py  test_inference_service.py  test_model_runtime.py  test_package.py  test_paths.py  test_predict_baseline.py  test_prepare_habr_comments.py  test_train_baseline.py  test_training_data.py
(+129 files in other folders)
