[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "toxic-analyzer-model"
version = "0.1.0"
description = "Model workspace for the Toxic Analyzer monorepo."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.1,<5.0",
    "huggingface-hub>=0.24,<2.0",
    "numpy>=1.26,<3.0",
    "pyarrow>=21.0,<24.0",
    "scikit-learn>=1.5,<2.0",
]

[project.scripts]
prepare-habr-comments = "toxic_analyzer.prepare_habr_comments:main"
build-habr-annotation-compact-db = "toxic_analyzer.build_habr_annotation_compact_db:main"
build-mixed-toxic-dataset = "toxic_analyzer.build_mixed_toxic_dataset:main"
train-baseline = "toxic_analyzer.train_baseline:main"
predict-baseline = "toxic_analyzer.predict_baseline:main"
ask-baseline = "toxic_analyzer.ask_baseline:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.6,<0.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
